--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,3 +10,7 @@
 - name: Issue certificates
   ansible.builtin.include_tasks: issue_certs.yml
   when: smallstep_certificates is defined and smallstep_certificates | length > 0
+
+- name: Renew certificates
+  ansible.builtin.include_tasks: renew_certs.yml
+  when: smallstep_enable_auto_renewal is defined and smallstep_enable_auto_renewal | bool
