--- a/tasks/generate_scripts.yml
+++ b/tasks/generate_scripts.yml
@@ -21,5 +21,5 @@
 - name: Generate README.md
   ansible.builtin.template:
     src: install/readme.md.j2
-    dest: "{{ smallstep_www_scripts_dir }}/README.md"
+    dest: "{{ smallstep_www_scripts_dir }}/README.txt"
     mode: "0644"
