--- a/tasks/generate_scripts.yml
+++ b/tasks/generate_scripts.yml
@@ -2,24 +2,24 @@
 
 - name: Generate install-linux.sh script
   ansible.builtin.template:
-    src: install/install-linux.sh.j2
+    src: scripts/install-linux.sh.j2
     dest: "{{ smallstep_www_scripts_dir }}/install-linux.sh"
     mode: "0644"
 
 - name: Generate install-linux.sh script
   ansible.builtin.template:
-    src: install/install-macos.sh.j2
+    src: scripts/install-macos.sh.j2
     dest: "{{ smallstep_www_scripts_dir }}/install-macos.sh"
     mode: "0644"
 
 - name: Generate install-windows.ps1
   ansible.builtin.template:
-    src: install/install-windows.ps1.j2
+    src: scripts/install-windows.ps1.j2
     dest: "{{ smallstep_www_scripts_dir }}/install-windows.ps1"
     mode: "0644"
 
 - name: Generate README.md
   ansible.builtin.template:
-    src: install/readme.md.j2
+    src: scripts/readme.md.j2
     dest: "{{ smallstep_www_scripts_dir }}/README.txt"
     mode: "0644"
