--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -9,11 +9,6 @@ on:
       - master
   workflow_dispatch:
     inputs:
-      branch:
-        description: 'Branch to run the pipeline on'
-        required: false
-        default: 'master'
-        type: string
       molecule_scenario:
         description: 'Molecule scenario to run'
         required: false
@@ -22,17 +17,13 @@ on:
         options:
           - all
           - default
-          - ubuntu2404
-      python_version:
-        description: 'Python version to use'
-        required: false
-        default: '3.9.23'
-        type: choice
-        options:
-          - '3.9.23'
-          - '3.10'
-          - '3.11'
-          - '3.12'
+          - almalinux-9
+          - almalinux-10
+          - rockylinux-10
+          - debian-11
+          - debian-12
+          - ubuntu-2204
+          - ubuntu-2404
       debug_mode:
         description: 'Enable debug mode for verbose output'
         required: false
@@ -41,28 +32,21 @@ on:
 
 jobs:
   lint:
-    name: Lint
+    name: Lint Syntax Checks
     runs-on: ubuntu-latest
+    container: 
+      image: ghcr.io/ginanck/molecule-runner:python3.12-2.15.13
     steps:
       - name: Check out the codebase
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.inputs.branch || github.ref }}
-
-      - name: Set up Python ${{ github.event.inputs.python_version || '3.9.23' }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ github.event.inputs.python_version || '3.9.23' }}
+          ref: ${{ github.ref }}
 
       - name: Download linter configurations
         run: |
           curl -fsSL https://raw.githubusercontent.com/ginanck/shared-pre-commit-hooks/master/config/ansible-lint.yml -o ansible-lint.yml
           curl -fsSL https://raw.githubusercontent.com/ginanck/shared-pre-commit-hooks/master/config/yamllint.yml -o yamllint.yml
           curl -fsSL https://raw.githubusercontent.com/ginanck/shared-pre-commit-hooks/master/config/flake8.conf -o flake8.conf
-
-      - name: Install linter dependencies
-        run: |
-          pip3 install ansible-lint yamllint flake8
 
       - name: Run ansible-lint
         run: |
@@ -76,37 +60,80 @@ jobs:
         run: |
           flake8 --config=flake8.conf .
 
-  molecule:
-    name: Molecule
+  prepare:
+    name: Prepare Matrix
     runs-on: ubuntu-latest
-    needs: lint
+    outputs:
+      scenarios: ${{ steps.set-matrix.outputs.scenarios }}
+    steps:
+      - name: Check out the codebase
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.ref }}
+
+      - name: Set matrix scenarios
+        id: set-matrix
+        run: |
+          set -euo pipefail
+          input="${{ github.event.inputs.molecule_scenario || 'all' }}"
+
+          if [ "$input" = "all" ]; then
+            scenarios_list=()
+            if [ -d "molecule" ]; then
+              for dir in molecule/*; do
+                [ -d "$dir" ] || continue
+                name="$(basename "$dir")"
+                if [ -f "$dir/molecule.yml" ] || [ -f "$dir/molecule.yaml" ]; then
+                  scenarios_list+=("$name")
+                fi
+              done
+            fi
+
+            if [ "${#scenarios_list[@]}" -eq 0 ]; then
+              echo "No scenario detected or selected! Please configure your molecule scenarios!" >&2
+              exit 1
+            fi
+
+            # build JSON array from list
+            scenarios="$(printf '%s\n' "${scenarios_list[@]}" | jq -R -s -c 'split("\n")[:-1]')"
+          else
+            # single scenario requested: validate it exists and has molecule.yml
+            sel="$input"
+            if [ -d "molecule/$sel" ] && ( [ -f "molecule/$sel/molecule.yml" ] || [ -f "molecule/$sel/molecule.yaml" ] ); then
+              scenarios="$(jq -n --arg s "$sel" '[$s]')"
+            else
+              echo "No scenario detected or selected! Please configure your molecule scenarios!" >&2
+              exit 1
+            fi
+          fi
+
+          echo "Found scenarios: $scenarios"
+          echo "scenarios=$scenarios" >> $GITHUB_OUTPUT
+
+  molecule:
+    name: Molecule Test
+    needs: prepare
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/ginanck/molecule-runner:python3.12-2.15.13
+      volumes:
+        - /var/run/docker.sock:/var/run/docker.sock
     strategy:
       fail-fast: false
       matrix:
-        scenario: ${{ (github.event.inputs.molecule_scenario || 'all') == 'all' && fromJson('["default", "ubuntu2404"]') || fromJson(format('["{0}"]', github.event.inputs.molecule_scenario || 'all')) }}
+        scenario: ${{ fromJson(needs.prepare.outputs.scenarios || '["default"]') }}
     env:
       DOCKER_HOST: 'unix:///var/run/docker.sock'
     steps:
       - name: Check out the codebase
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.inputs.branch || github.ref }}
-
-      - name: Set up Python ${{ github.event.inputs.python_version || '3.9.23' }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ github.event.inputs.python_version || '3.9.23' }}
-
-      - name: Install minimal test dependencies
-        run: |
-          pip3 install ansible molecule molecule-docker docker
+          ref: ${{ github.ref }}
 
       - name: Run Molecule tests for ${{ matrix.scenario }} scenario
         run: |
-          ansible-galaxy collection install community.docker:4.8.1 --force
-
           if [ "${{ github.event.inputs.debug_mode }}" == "true" ]; then
-            molecule test -s ${{ matrix.scenario }} --debug
+            molecule --debug -vvv test -s ${{ matrix.scenario }}
           else
             molecule test -s ${{ matrix.scenario }}
           fi
